# carbone-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: carbone.rs  config.rs  render.rs  template.rs  types.rs
src/blocking/: mod.rs
src/errors/: mod.rs
tests/: blocking.rs  carbone_response_test.rs  carbone_test.rs  config_test.rs  helper.rs  render_test.rs  template_test.rs  types_test.rs
tests/data/: template2.odt  ~$mplate2.odt
