[package]
name = "carbone-sdk-rust"
version = "1.0.0"
edition = "2021"
authors = ["Carbone.io <dev@carbone.io>"]
description = "Generate documents with Carbone, using templates and JSON data-set. Create invoices, reports, certificates, contracts, financial statements, documents like Word files, Excel sheets, CSVs, PowerPoint slides, and more. The template can be a DOCX, PPTX, XLSX, CSV, XML, HTML and many formats."
homepage = "https://carbone.io"
repository = "https://github.com/carboneio/carbone-sdk-rust"
readme = "README.md"
license = "Apache-2.0"
keywords = ["document", "automation", "pdf", "docx", "xlsx"]
categories = ["template-engine", "api-bindings", "filesystem"]
exclude = ["tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
blocking = []
#default = ["blocking"]

[[test]]
name = "blocking"
path = "tests/blocking.rs"
required-features = ["blocking"]

[dependencies]
mime_guess = "2"
data-encoding = "2"
ring = "0.16.20"
bytes = "1.4.0"
reqwest = { version = "0.11.16", features = ["multipart", "blocking", "json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_with = "3.1.0"
serde_json = "1.0.95"
thiserror = "1.0.40"
anyhow = "1.0.71"
validator = { version = "0.16", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
httpmock = "0.6"
tokio = { version = "1", features = ["full"] }
